fix: z-index

--- a/react/src/styles.scss
+++ b/react/src/styles.scss
@@ -8,7 +8,7 @@
 
   height: 100vh;
   width: 100%;
-  z-index: 2;
+  z-index: 999999;
   padding: 20px;
   top: 0;
   left: 0;
